--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: python
 python:
   - "3.5"
+
+# current requirement to run postgres 9.5 on travis
+sudo: required
+dist: trusty
+
 addons:
-  postgresql: "9.4"
+  postgresql: "9.5"
 env:
   global:
     - DB=postgresql
@@ -14,7 +19,6 @@ cache:
     - $HOME/.cache/pip/wheels
     - $HOME/travis/virtualenv/python3.5.2
 
-sudo: false
 install:
   - pip install --upgrade pip
   - pip install wheel
@@ -22,10 +26,6 @@ install:
   - pip install -r requirements-test.txt
   - python setup.py install
 
-# before_script:
-  # - psql -c 'CREATE database IF NOT EXISTS pga_testing;' -U postgres
-  # - psql -U postgres -c "create user pga_user"
 script:
-  # - psql -c 'CREATE DATABASE $PGDATABASE;' -U postgres
   - python create_db.py
   - py.test tests -s
