--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,12 @@ install:
   - pip install wheel
   - pip install -r requirements.txt
   - pip install -r requirements-test.txt
+  - pip install codecov
   - python setup.py install
 
 script:
   - python create_db.py
-  - py.test tests -s
+  - py.test tests -s --cov
+
+after_success:
+  - codecov
