--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [wheel]
-python-tag = py35
+python-tag = py35, py36
 
 [bdist_wheel]
-python-tag = py35
+python-tag = py35, py36
 
 [aliases]
 test=pytest
