Modify travis coverage path.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
 
 script:
   - python create_db.py
-  - py.test tests -s --cov
+  - py.test tests --cov=./
 
 after_success:
   - codecov
